--- a/style.scss
+++ b/style.scss
@@ -2,6 +2,8 @@
   margin: 0;
   padding: 0;
   font-family: "Sora", sans-serif;
+  position: static;
+  box-sizing: border-box;
 }
 
 /////
@@ -25,20 +27,23 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 50vh;
+  height: 60vh;
   color: white;
   display: flex;
   flex-direction: column;
   justify-content: center;
   font-size: 30px;
   padding: 30px;
+  padding-bottom: 100px;
+  
+
 
   .header-txt {
-    width: 800px;
+    width: 900px;
     margin-bottom: 20px;
     padding: 30px;
-  
     margin: auto;
+    padding-bottom: 30px;
   
   }
 
@@ -300,9 +305,8 @@ body {
     margin-top: 20px;
   }
 
-  h1{
-    margin-bottom: 10px;
-  }
+
+
 
 
    
@@ -491,7 +495,7 @@ h2, h3{
           background-color: rgb(184, 179, 179);
           border: 1px solid black;
           border-radius: 25px;
-          height: 50vh;
+          height: 70vh;
           width: 200px;
           text-align: justify;
           margin-bottom: 20px;
@@ -508,16 +512,18 @@ h2, h3{
           background-color: rgb(230, 230, 246);
     
       }}
-      .dois {
-        margin-top: 150px;
-       }
-      
-       .nyse{
-        margin-top: 70px;
+       .bolsas-text{
+        margin: 80px 30px;
+        width: 100%;
        }
 
        .intro{
         margin: 50px auto;
+       }
+
+       .b3-text{
+        width: 60%;
+        margin: 0;
        }
     }
 
@@ -713,6 +719,10 @@ h2, h3{
     
         }
       }
+
+      .bolsas-text{
+        width: 100%;
+      }
    
       .um .bolsas-text{
         padding-bottom: 0;
@@ -817,13 +827,14 @@ h2, h3{
       url(./img/fundo.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
-    width: 100%;
-    height: 95vh;
+    height:90vh;
+    padding: 0;
+
+    
     color: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    font-size: 30px;
 
     h1{
       font-size: 20px ;
@@ -831,12 +842,10 @@ h2, h3{
     }
   
     .header-txt {
-    height: 95vh;
-      width: 300px;
-      align-items: center;
-      text-align: justify;
-      margin: auto;
       margin-top: 15px;
+      padding: 0;
+      width: 350px;
+
   
 
      
@@ -926,7 +935,7 @@ h2, h3{
     display: flex;
     flex-direction: column;
     margin: 0;
-    min-height: 180vh;
+    min-height: 220vh;
     padding-bottom: 80px;
 
 
@@ -996,17 +1005,18 @@ h2, h3{
   .um{
     display: flex;
     flex-direction: column;
+    margin-bottom: 30px;
   }
 
   .dois{
     display: flex;
     flex-direction: column;
-    margin-top: 10px;
+    margin-top: 30px;
   }
   .bolsas .bolsas-text {
     width: 100%;
     padding: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 100px;
   }
 
   .bolsas-text h1 {
@@ -1076,6 +1086,8 @@ h2, h3{
 
 
 }
+
+
 
 
   
