--- a/style.css
+++ b/style.css
@@ -285,15 +285,14 @@ a {
   align-items: center;
   justify-content: center;
   margin: auto;
-  padding: 30px;
+  padding: 15px;
   padding-top: 100px;
+  flex-direction: column;
 }
 .b3 .b3-text {
-  width: 40%;
   text-align: justify;
   padding: 20px;
   margin: 20px;
-  margin-left: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
