--- a/style.scss
+++ b/style.scss
@@ -356,16 +356,16 @@ body {
   align-items: center;
   justify-content: center;
   margin: auto;
-  padding: 30px;
+  padding: 15px;
   padding-top: 100px;
+  flex-direction: column;
 
 
   .b3-text{
-    width: 40%;
+
     text-align: justify;
     padding: 20px;
     margin: 20px;
-    margin-left: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
