--- a/style.scss
+++ b/style.scss
@@ -1073,19 +1073,18 @@ h2, h3{
   }
 
   
-
-  .quiz-container{
-    width: 200px;
-    margin-top: 15px;
-
-    button{
+.quiz-container{
+  width: 100%;
+}
+   
+    #submit{
       font-size: 12px;
       padding: 5px;
     }
   }
 
 
-}
+
 
 
 
