--- a/style.css
+++ b/style.css
@@ -6,124 +6,103 @@
   box-sizing: border-box;
 }
 
-body {
-  background-color: rgb(255, 255, 255);
-  padding: 100px 150px;
-  margin: 0;
-  padding: 0;
+main {
+  margin: 80px;
 }
 
-.header {
-  background-image: linear-gradient(to left, rgb(0, 0, 0), rgba(0, 0, 0, 0.7)), url(./img/fundo.jpeg);
-  background-repeat: no-repeat;
-  background-size: cover;
+.container-intro {
   width: 100%;
-  height: 60vh;
-  color: white;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  font-size: 30px;
-  padding: 30px;
-  padding-bottom: 100px;
-}
-.header .header-txt {
-  width: 900px;
-  margin-bottom: 20px;
-  padding: 30px;
-  margin: auto;
-  padding-bottom: 30px;
-}
-.header .header-txt p {
-  font-size: 16px;
-  border-left: 5px solid rgb(255, 255, 255);
-  padding: 10px;
-  margin-top: 30px;
-}
-.header .btn-1 {
-  background-color: rgb(28, 63, 158);
-  padding: 10px;
-  color: white;
-  border-radius: 7px;
-  border: none;
-  margin: 8px;
-  cursor: pointer;
-  margin-left: 15px;
-}
-.header .btn-1:hover {
-  background-color: rgb(37, 82, 206);
+  justify-content: center; /* Centraliza horizontalmente */
+  align-items: center; /* Centraliza verticalmente */
 }
 
-.h1 {
-  background-color: rgb(184, 179, 179);
-  padding: 10px 0 10px 30px;
+.intro-container {
+  width: 100%;
+  margin: 30px;
 }
 
-.main {
-  display: flex;
-  padding: 10px;
-  background-color: rgb(184, 179, 179);
-}
-.main .main-2 {
-  border-left: 3px solid rgb(28, 63, 158);
+.intro-texto {
   padding: 20px;
-  margin: 20px;
-  width: 20%;
-  font-size: 18px;
-}
-.main .main-2 h2 {
-  margin-bottom: 40px;
-}
-
-.historia {
-  background-color: rgb(243, 237, 237);
-  padding: 50px;
-  display: flex;
-}
-.historia .historia-text {
-  padding: 20px;
-  margin-right: 20px;
-  font-size: 18px;
-  color: black;
   text-align: justify;
+  width: 100%;
 }
-.historia .historia-img img {
-  border-radius: 50px;
-  margin-top: 80px;
+.intro-texto h1 {
+  margin-bottom: 30px;
+  color: rgb(49, 87, 182);
+  font-size: 40px;
+}
+
+.container-card {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.card {
   width: 500px;
+  height: 200px;
+  margin: 30px;
+  border-radius: 15px;
+  align-items: center;
 }
-
-.analisetec {
-  background-color: rgb(243, 237, 237);
+.card .card-conteudo {
+  width: 500px;
+  height: 200px;
   padding: 20px;
-  text-align: justify;
-  margin: auto;
+  background-color: rgb(236, 237, 244);
+  align-items: center;
+  text-align: center;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.card .card-conteudo:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 20px rgb(176, 178, 194);
+}
+.card .card-conteudo:hover h2 {
+  color: rgb(49, 87, 182);
+}
+.card p {
+  margin-top: 20px;
 }
 
 .grafico-container {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
   gap: 100px 50px;
   flex-wrap: wrap;
   padding-top: 100px;
   padding-bottom: 50px;
-  background-color: rgb(243, 237, 237);
+  width: 100%;
+}
+.grafico-container .grafico-intro {
+  text-align: center;
+  margin: auto;
+  width: 1000px;
+  color: rgb(49, 87, 182);
+}
+.grafico-container .teste {
+  justify-content: center;
+  align-items: center;
+  gap: 50px 50px;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 20px;
 }
 .grafico-container .grafico {
   position: relative;
   width: 350px;
   height: 250px;
-  background: rgb(184, 179, 179);
-  box-shadow: 0 35px 80px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 35px 80px rgba(55, 95, 204, 0.11);
   transition: 0.5s;
   justify-content: center;
   display: flex;
   cursor: pointer;
+  background-color: rgb(236, 237, 244);
 }
 .grafico-container .grafico:hover {
   height: 500px;
-  background: rgb(37, 82, 206);
+  background: rgb(49, 87, 182);
   transition: 0.5s;
 }
 .grafico-container .grafico-img {
@@ -176,623 +155,151 @@ body {
   margin: 10px 15px 5px 15px;
 }
 
-.negociacao {
-  background-image: linear-gradient(to top, rgb(0, 0, 0), rgba(0, 0, 0, 0.7)), url(./img/fundo.jpeg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  display: flex;
-  align-items: center;
-  padding: 10px;
-}
-.negociacao .negociacao-um {
-  width: 40%;
-  font-size: 18px;
-  margin-left: 100px;
-  color: white;
+.container-finalizacao {
+  width: 100%;
   text-align: justify;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.negociacao .negociacao-text-um {
-  display: flex;
-  flex-direction: column;
-  width: 50%;
-  height: 90vh;
-}
-.negociacao .negociacao-text {
-  margin: 20px;
-  background-color: rgb(184, 179, 179);
-  border: 1px solid black;
-  border-radius: 25px;
-  padding: 10px;
-  text-align: center;
-}
-.negociacao .negociacao-text:hover {
-  background-color: rgb(230, 230, 246);
-}
-
-.bolsa-container {
-  width: 60%;
   margin: auto;
-  margin-bottom: 40px;
-  color: rgb(28, 63, 158);
-  padding-top: 60px;
+  display: flex;
+  align-items: center;
+}
+.container-finalizacao .finalizacao {
+  padding: 30px;
+  width: 70%;
+}
+.container-finalizacao .finalizacao p {
+  margin-bottom: 16px;
 }
 
-.container-bolsa {
+.container-teste {
+  width: 500px;
+  height: 250px;
+  margin: 30px;
+  border-radius: 15px;
+  align-items: center;
+}
+
+.teste-intro {
+  width: 500px;
+  height: 250px;
+  background-color: rgb(236, 237, 244);
+  padding: 20px;
   align-items: center;
   text-align: center;
-  justify-content: center;
-  padding-bottom: 50px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.teste-intro:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 20px rgb(176, 178, 194);
 }
 
-.bolsas-text {
-  margin: 20px;
+h3 {
+  margin-bottom: 20px;
+}
+
+h4 {
+  margin-bottom: 15px;
+}
+
+button {
+  background-color: rgb(49, 87, 182);
+  width: 140px;
+  height: 35px;
+  border: none;
+  border-radius: 8px;
+  margin-top: 50px;
+  cursor: pointer;
+  color: white;
+}
+button:hover {
+  background-color: rgb(64, 111, 230);
+}
+button a {
+  text-decoration: none;
+  align-items: center;
+  color: white;
+}
+
+.container-text {
+  display: flex;
   width: 30%;
-  height: 35vh;
-  padding: 15px;
-  display: flex;
-  flex-direction: column;
-}
-
-.um {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-}
-.um p {
+  height: 40vh;
   margin-top: 20px;
+  margin-top: 100px;
+  color: white;
 }
-
-.dois {
-  display: flex;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
+.container-text h3 {
+  margin-bottom: 30px;
 }
-.dois p {
-  margin-top: 20px;
-}
-.dois h1 {
+.container-text h4 {
   margin-bottom: 10px;
 }
-
-a {
-  text-decoration: none;
-  color: white;
-}
-
-.btn {
-  background-color: rgb(28, 63, 158);
-  padding: 10px;
-  color: white;
-  border-radius: 7px;
+.container-text button {
+  margin-top: 30px;
   border: none;
-  margin-top: 20px;
-  cursor: pointer;
+  width: 200px;
+  height: 40px;
 }
-.btn:hover {
-  background-color: rgb(37, 82, 206);
-}
-
-.b3 {
-  background-color: rgb(243, 237, 237);
-  display: flex;
-  text-align: center;
-  align-items: center;
-  justify-content: center;
-  margin: auto;
-  padding: 15px;
-  padding-top: 100px;
-  flex-direction: column;
-}
-.b3 .b3-text {
-  text-align: justify;
+.container-text a {
+  text-decoration: none;
   padding: 20px;
-  margin: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  color: black;
 }
 
-h2, h3 {
-  color: rgb(28, 63, 158);
+footer {
+  width: 100%;
+  bottom: 0;
+  margin: 0;
+  padding: 50px;
+  background-color: rgb(49, 87, 182);
+}
+footer h3 {
+  text-align: center;
+  padding-bottom: 30px;
+}
+
+.footer {
+  width: 100%;
+  bottom: 0;
+  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.footer .resumo-text {
+  width: 800px;
+  margin: 20px;
+}
+.footer .resumo-text h3 {
+  text-align: justify;
+}
+.footer .resumo-conteudo {
+  width: 100%;
+  background-color: rgb(49, 87, 182);
 }
 
 .intro {
-  background-color: rgb(243, 237, 237);
-  margin: auto;
-  margin-top: 40px;
-  width: 60%;
-  padding: 70px;
-  text-align: justify;
+  background-color: rgb(236, 237, 244);
+  padding: 30px;
 }
-.intro h1 {
-  margin-bottom: 30px;
+.intro .intro-text p, .intro .intro-text h1 {
+  margin: 15px 0;
 }
-.intro p {
-  margin-bottom: 20px;
-}
-.intro button {
-  margin-bottom: 30px;
-}
-
-.teste {
-  background-color: rgb(243, 237, 237);
-  margin: auto;
-  width: 60%;
-  padding: 70px;
-  text-align: justify;
+.intro .intro-text button {
+  margin-top: 15px;
 }
 
 .quiz-container {
-  background-color: rgb(243, 237, 237);
+  background-color: rgb(236, 237, 244);
+  padding: 30px;
   margin: auto;
-  margin-top: 40px;
-  width: 80%;
-  padding: 70px;
-  text-align: justify;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
-.quiz-container h2 {
-  margin-bottom: 30px;
+.quiz-container h2, .quiz-container input {
+  margin: 10px 0;
 }
-.quiz-container li {
-  margin-bottom: 15px;
+.quiz-container ul {
   list-style: none;
-}
-
-.btn-proxima {
-  background-color: rgb(28, 63, 158);
-  padding: 10px;
-  color: white;
-  border-radius: 7px;
-  border: none;
-  margin-top: 20px;
-  cursor: pointer;
-}
-.btn-proxima:hover {
-  background-color: rgb(37, 82, 206);
-}
-
-@media screen and (max-width: 1800px) {
-  .negociacao {
-    background-image: linear-gradient(to top, rgb(0, 0, 0), rgba(0, 0, 0, 0.7)), url(./img/fundo.jpeg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-  }
-  .negociacao .negociacao-um {
-    width: 80%;
-    padding: 10px;
-    padding-top: 50px;
-    margin: 0;
-    margin-bottom: 30px;
-    color: white;
-    text-align: justify;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .negociacao .negociacao-text-um {
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-    flex-direction: row;
-    width: 100%;
-  }
-  .negociacao .negociacao-text {
-    margin: 10px;
-    background-color: rgb(184, 179, 179);
-    border: 1px solid black;
-    border-radius: 25px;
-    height: 70vh;
-    width: 200px;
-    text-align: justify;
-    margin-bottom: 20px;
-    padding: 20px;
-  }
-  .negociacao .negociacao-text h3 {
-    text-align: center;
-  }
-  .negociacao .negociacao-text:hover {
-    background-color: rgb(230, 230, 246);
-  }
-  .bolsas-text {
-    margin: 80px 30px;
-    width: 100%;
-  }
-  .intro {
-    margin: 50px auto;
-  }
-  .b3-text {
-    width: 60%;
-    margin: 0;
-  }
-}
-@media screen and (max-width: 1000px) {
-  * {
-    margin: 0;
-    padding: 0;
-    font-family: "Sora", sans-serif;
-    font-size: 12px;
-  }
-  main {
-    width: 100vw;
-    margin: 0;
-    padding: 0;
-    border: 0;
-  }
-  body {
-    background-color: rgb(255, 255, 255);
-    margin: 0;
-    padding: 0;
-  }
-  .header {
-    background-image: linear-gradient(to left, rgb(0, 0, 0), rgba(0, 0, 0, 0.7)), url(./img/fundo.jpeg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 40vh;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    font-size: 30px;
-  }
-  .header h1 {
-    font-size: 20px;
-  }
-  .header .header-txt {
-    height: 30vh;
-    width: 600px;
-    align-items: center;
-    text-align: justify;
-    margin: auto;
-    margin-top: 15px;
-  }
-  .header .header-txt p {
-    font-size: 16px;
-    border-left: 5px solid rgb(255, 255, 255);
-    padding: 10px;
-  }
-  .header .btn-1 {
-    background-color: rgb(28, 63, 158);
-    padding: 10px;
-    color: white;
-    border-radius: 7px;
-    border: none;
-    margin: 8px;
-    cursor: pointer;
-    margin-left: 15px;
-  }
-  .header .btn-1:hover {
-    background-color: rgb(37, 82, 206);
-  }
-  .historia {
-    background-color: rgb(243, 237, 237);
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-  }
-  .historia .historia-text {
-    padding: 20px;
-    color: black;
-    text-align: justify;
-  }
-  .historia .historia-img img {
-    width: 300px;
-    margin: auto;
-    margin-left: 25%;
-  }
-  .main {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-  .main-2 {
-    flex-basis: 100%;
-    padding: 20px;
-    margin: 10px;
-    font-size: 18px;
-    background-color: rgb(184, 179, 179);
-  }
-  .main-2 h2 {
-    margin-bottom: 20px;
-  }
-  .negociacao {
-    background-image: linear-gradient(to top, rgb(0, 0, 0), rgba(0, 0, 0, 0.7)), url(./img/fundo.jpeg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    align-items: center;
-    height: 130vh;
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-  }
-  .negociacao .negociacao-um {
-    width: 80%;
-    padding: 10px;
-    padding-top: 50px;
-    margin: 0;
-    margin-bottom: 30px;
-    color: white;
-    text-align: justify;
-  }
-  .negociacao .negociacao-text-um {
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-  }
-  .negociacao .negociacao-text {
-    margin: 10px;
-    background-color: rgb(184, 179, 179);
-    border: 1px solid black;
-    border-radius: 25px;
-    width: 700px;
-    text-align: justify;
-    margin-bottom: 20px;
-  }
-  .negociacao .negociacao-text h3 {
-    text-align: center;
-  }
-  .negociacao .negociacao-text:hover {
-    background-color: rgb(230, 230, 246);
-  }
-  .negociacao .btn {
-    width: 200px;
-    margin-top: 15px;
-  }
-  .bolsas-text {
-    width: 100%;
-  }
-  .um .bolsas-text {
-    padding-bottom: 0;
-    margin-bottom: 0;
-    height: 30vh;
-  }
-  .dois .bolsas-text {
-    padding-top: 0;
-    margin-top: 0;
-  }
-  .b3 {
-    flex-direction: column;
-    margin: 0;
-    padding: 10px;
-  }
-  .b3 .b3-text {
-    margin: 0;
-    padding: 50px;
-    width: 100%;
-    text-align: justify;
-  }
-  .b3-text p {
-    font-size: 12px; /* Reduzindo o tamanho do texto */
-    margin-bottom: 10px;
-    margin: 0;
-    padding: 0;
-  }
-  .b3-text .btn {
-    width: 200px;
-    margin-top: 15px;
-  }
-  .nyse {
-    margin-top: 31px;
-  }
-  .intro {
-    margin-top: 40px;
-  }
-}
-/* Estilos para telas menores ou iguais a 400px de largura */
-@media screen and (max-width: 600px) {
-  * {
-    margin: 0;
-    padding: 0;
-    font-family: "Sora", sans-serif;
-    font-size: 12px;
-  }
-  main {
-    width: 100vw;
-    margin: 0;
-    padding: 0;
-    border: 0;
-  }
-  body {
-    background-color: rgb(255, 255, 255);
-    margin: 0;
-    padding: 0;
-  }
-  .header {
-    background-image: linear-gradient(to left, rgb(0, 0, 0), rgba(0, 0, 0, 0.7)), url(./img/fundo.jpeg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 90vh;
-    padding: 0;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-  .header h1 {
-    font-size: 20px;
-  }
-  .header .header-txt {
-    margin-top: 15px;
-    padding: 0;
-    width: 350px;
-  }
-  .header .header-txt p {
-    font-size: 16px;
-    border-left: 5px solid rgb(255, 255, 255);
-    padding: 10px;
-  }
-  .header .btn-1 {
-    background-color: rgb(28, 63, 158);
-    padding: 10px;
-    color: white;
-    border-radius: 7px;
-    border: none;
-    margin: 8px;
-    cursor: pointer;
-    margin-left: 15px;
-  }
-  .header .btn-1:hover {
-    background-color: rgb(37, 82, 206);
-  }
-  .h1 {
-    background-color: rgb(184, 179, 179);
-    font-size: 30px;
-    text-align: center;
-    color: rgb(37, 82, 206);
-  }
-  .historia {
-    background-color: rgb(243, 237, 237);
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-  }
-  .historia .historia-text {
-    padding: 20px;
-    color: black;
-    text-align: justify;
-  }
-  .historia .historia-img img {
-    width: 300px;
-    margin: auto;
-    justify-content: center;
-    margin-left: 15px;
-  }
-  .main {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-  .main-2 {
-    flex-basis: 100%;
-    padding: 20px;
-    margin: 10px;
-    font-size: 18px;
-    background-color: rgb(184, 179, 179);
-  }
-  .main-2 h2 {
-    margin-bottom: 20px;
-  }
-  .negociacao {
-    background-image: linear-gradient(to top, rgb(0, 0, 0), rgba(0, 0, 0, 0.7)), url(./img/fundo.jpeg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-    min-height: 220vh;
-    padding-bottom: 80px;
-  }
-  .negociacao .negociacao-um {
-    padding: 10px;
-    padding-bottom: 10px;
-    color: white;
-    text-align: justify;
-    display: flex;
-    flex-direction: column;
-  }
-  .negociacao .negociacao-text-um {
-    display: flex;
-    flex-direction: column;
-  }
-  .negociacao .negociacao-text {
-    background-color: rgb(184, 179, 179);
-    border: 1px solid black;
-    border-radius: 25px;
-    text-align: justify;
-    width: 300px;
-  }
-  .negociacao .negociacao-text h3 p {
-    text-align: center;
-  }
-  .negociacao .negociacao-text:hover {
-    background-color: rgb(230, 230, 246);
-  }
-  .bolsa-container h1 {
-    padding: 20px;
-    text-align: center;
-    align-items: center;
-    width: 100vw;
-    margin: 0;
-  }
-  .bolsas {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-  }
-  .um {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 30px;
-  }
-  .dois {
-    display: flex;
-    flex-direction: column;
-    margin-top: 30px;
-  }
-  .bolsas .bolsas-text {
-    width: 100%;
-    padding: 20px;
-    margin-bottom: 100px;
-  }
-  .bolsas-text h1 {
-    font-size: 20px;
-    margin-bottom: 10px;
-  }
-  .bolsas-text p {
-    font-size: 14px;
-    margin-bottom: 10px;
-  }
-  .btn {
-    padding: 10px 10px;
-    font-size: 14px;
-    width: 100px;
-    margin: auto;
-  }
-  .b3 {
-    flex-direction: column;
-    margin: 0;
-    padding: 10px;
-  }
-  .b3 .b3-text {
-    margin: 0;
-    padding: 50px;
-    width: 100%;
-    text-align: justify;
-  }
-  .b3-text p {
-    font-size: 12px; /* Reduzindo o tamanho do texto */
-    margin-bottom: 10px;
-    margin: 0;
-    padding: 0;
-  }
-  .b3-text .btn {
-    width: 200px;
-    margin-top: 15px;
-  }
-  .intro {
-    padding: 30px;
-    width: auto;
-  }
-  .quiz-container {
-    width: 100%;
-  }
-  #submit {
-    font-size: 12px;
-    padding: 5px;
-  }
 }/*# sourceMappingURL=style.css.map */
