--- a/style.css
+++ b/style.css
@@ -7,19 +7,23 @@
 }
 
 main {
-  margin: 80px;
+  margin: 0;
 }
 
 .container-intro {
   width: 100%;
+  margin-bottom: 30px;
   display: flex;
   justify-content: center; /* Centraliza horizontalmente */
   align-items: center; /* Centraliza verticalmente */
 }
 
 .intro-container {
+  padding: 50px;
   width: 100%;
-  margin: 30px;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url("./img/fundo.jpeg");
+  background-size: cover;
+  color: rgb(255, 255, 255);
 }
 
 .intro-texto {
@@ -29,11 +33,12 @@ main {
 }
 .intro-texto h1 {
   margin-bottom: 30px;
-  color: rgb(49, 87, 182);
+  color: white;
   font-size: 40px;
 }
 
 .container-card {
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -44,12 +49,10 @@ main {
   height: 200px;
   margin: 30px;
   border-radius: 15px;
-  align-items: center;
 }
 .card .card-conteudo {
-  width: 500px;
-  height: 200px;
   padding: 20px;
+  height: 200px;
   background-color: rgb(236, 237, 244);
   align-items: center;
   text-align: center;
@@ -66,55 +69,51 @@ main {
   margin-top: 20px;
 }
 
+.teste {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 100px 50px;
+  flex-wrap: wrap;
+  margin-bottom: 80px;
+  margin-top: 80px;
+}
+
 .grafico-container {
   display: flex;
   flex-direction: column;
-  gap: 100px 50px;
-  flex-wrap: wrap;
-  padding-top: 100px;
-  padding-bottom: 50px;
-  width: 100%;
+  margin: 50px 50px;
 }
 .grafico-container .grafico-intro {
   text-align: center;
-  margin: auto;
-  width: 1000px;
   color: rgb(49, 87, 182);
+  margin: auto;
+  padding: 0 200px;
 }
-.grafico-container .teste {
-  justify-content: center;
-  align-items: center;
-  gap: 50px 50px;
-  display: flex;
-  flex-wrap: wrap;
-  margin: 20px;
-}
-.grafico-container .grafico {
+.grafico-container .teste .grafico {
   position: relative;
-  width: 350px;
-  height: 250px;
-  box-shadow: 0 35px 80px rgba(55, 95, 204, 0.11);
+  width: 300px;
+  height: 300px;
+  background: rgb(49, 54, 79);
+  box-shadow: 0 35px 80px rgba(0, 0, 0, 0.15);
   transition: 0.5s;
   justify-content: center;
   display: flex;
-  cursor: pointer;
-  background-color: rgb(236, 237, 244);
 }
-.grafico-container .grafico:hover {
-  height: 500px;
-  background: rgb(49, 87, 182);
-  transition: 0.5s;
+.grafico-container .teste .grafico:hover {
+  height: 715px;
+  width: 400px;
+  border-radius: 20px;
 }
-.grafico-container .grafico-img {
+.grafico-container .teste .grafico .grafico-img {
   position: absolute;
-  width: 300px;
+  width: 200px;
   height: 150px;
   border-radius: 12px;
   top: 20px;
   transition: 0.5s;
-  cursor: pointer;
 }
-.grafico-container .grafico-img img {
+.grafico-container .teste .grafico .grafico-img img {
   position: absolute;
   top: 0;
   left: 0;
@@ -123,9 +122,8 @@ main {
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 12px;
-  cursor: pointer;
 }
-.grafico-container .grafico-text {
+.grafico-container .teste .grafico .grafico-text {
   position: absolute;
   top: 200px;
   width: 100%;
@@ -133,74 +131,72 @@ main {
   overflow: hidden;
   text-align: center;
 }
-.grafico-container .grafico:hover .grafico-text {
-  top: 50px;
-  height: 400px;
+.grafico-container .teste .grafico:hover .grafico-text {
+  top: 100px;
+  height: 715px;
+  text-align: justify;
+  padding: 3px;
 }
-.grafico-container .grafico:hover .grafico-img {
+.grafico-container .teste .grafico:hover .grafico-img {
   top: -100px;
   scale: 0.75;
   box-shadow: 0 15px 45px rgba(0, 0, 0, 0.2);
 }
-.grafico-container .grafico-text h3 {
+.grafico-container .teste .grafico .grafico-text h3 {
   font-size: 1.5rem;
   font-weight: 700;
   line-height: 3rem;
-  color: black;
+  color: rgb(230, 230, 246);
   margin-top: -10px;
+  text-align: center;
 }
-.grafico-container .grafico-text p {
+.grafico-container .teste .grafico .grafico-text p {
   color: rgb(236, 237, 244);
   padding: 0 20px;
   margin: 10px 15px 5px 15px;
 }
-
-.container-finalizacao {
+.grafico-container .container-finalizacao {
   width: 100%;
   text-align: justify;
   margin: auto;
   display: flex;
   align-items: center;
+  padding: 50px;
+  display: flex;
+  flex-direction: column;
 }
-.container-finalizacao .finalizacao {
+.grafico-container .container-finalizacao .finalizacao {
   padding: 30px;
   width: 70%;
 }
-.container-finalizacao .finalizacao p {
+.grafico-container .container-finalizacao .finalizacao p {
   margin-bottom: 16px;
 }
-
-.container-teste {
-  width: 500px;
-  height: 250px;
-  margin: 30px;
-  border-radius: 15px;
+.grafico-container .container-teste {
+  height: 35vh; /* 50% da altura da tela */
+  margin: 5%; /* 5% da largura da tela em cada margem */
+  border-radius: 10px;
   align-items: center;
 }
-
-.teste-intro {
-  width: 500px;
-  height: 250px;
+.grafico-container .container-teste .teste-intro {
+  height: 100%;
   background-color: rgb(236, 237, 244);
-  padding: 20px;
+  padding: 5%; /* 5% da largura da tela */
   align-items: center;
   text-align: center;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
-.teste-intro:hover {
+.grafico-container .container-teste .teste-intro:hover {
   transform: scale(1.05);
   box-shadow: 0 0 20px rgb(176, 178, 194);
 }
-
-h3 {
+.grafico-container h3 {
   margin-bottom: 20px;
 }
-
-h4 {
+.grafico-container h4 {
   margin-bottom: 15px;
 }
-
-button {
+.grafico-container button {
   background-color: rgb(49, 87, 182);
   width: 140px;
   height: 35px;
@@ -210,16 +206,15 @@ button {
   cursor: pointer;
   color: white;
 }
-button:hover {
+.grafico-container button:hover {
   background-color: rgb(64, 111, 230);
 }
-button a {
+.grafico-container button a {
   text-decoration: none;
   align-items: center;
   color: white;
 }
-
-.container-text {
+.grafico-container .container-text {
   display: flex;
   width: 30%;
   height: 40vh;
@@ -227,37 +222,36 @@ button a {
   margin-top: 100px;
   color: white;
 }
-.container-text h3 {
+.grafico-container .container-text h3 {
   margin-bottom: 30px;
 }
-.container-text h4 {
+.grafico-container .container-text h4 {
   margin-bottom: 10px;
 }
-.container-text button {
+.grafico-container .container-text button {
   margin-top: 30px;
   border: none;
   width: 200px;
   height: 40px;
 }
-.container-text a {
+.grafico-container .container-text a {
   text-decoration: none;
   padding: 20px;
   color: black;
 }
-
-footer {
+.grafico-container footer {
   width: 100%;
   bottom: 0;
   margin: 0;
-  padding: 50px;
+  padding: 30px 50px;
   background-color: rgb(49, 87, 182);
 }
-footer h3 {
+.grafico-container footer h3 {
   text-align: center;
   padding-bottom: 30px;
+  color: black;
 }
-
-.footer {
+.grafico-container .footer {
   width: 100%;
   bottom: 0;
   margin: 0;
@@ -265,30 +259,28 @@ footer h3 {
   flex-wrap: wrap;
   justify-content: space-around;
 }
-.footer .resumo-text {
+.grafico-container .footer .resumo-text {
   width: 800px;
   margin: 20px;
 }
-.footer .resumo-text h3 {
+.grafico-container .footer .resumo-text h3 {
   text-align: justify;
 }
-.footer .resumo-conteudo {
+.grafico-container .footer .resumo-conteudo {
   width: 100%;
   background-color: rgb(49, 87, 182);
 }
-
-.intro {
+.grafico-container .intro {
   background-color: rgb(236, 237, 244);
   padding: 30px;
 }
-.intro .intro-text p, .intro .intro-text h1 {
+.grafico-container .intro .intro-text p, .grafico-container .intro .intro-text h1 {
   margin: 15px 0;
 }
-.intro .intro-text button {
+.grafico-container .intro .intro-text button {
   margin-top: 15px;
 }
-
-.quiz-container {
+.grafico-container .quiz-container {
   background-color: rgb(236, 237, 244);
   padding: 30px;
   margin: auto;
@@ -297,9 +289,34 @@ footer h3 {
   flex-direction: column;
   justify-content: center;
 }
-.quiz-container h2, .quiz-container input {
+.grafico-container .quiz-container h2, .grafico-container .quiz-container input {
   margin: 10px 0;
 }
-.quiz-container ul {
+.grafico-container .quiz-container ul {
   list-style: none;
+}
+@media screen and (max-width: 768px) {
+  .grafico-container .container-intro .intro-container {
+    margin: 0;
+    padding: 10px;
+  }
+  .grafico-container .container-card .card-conteudo {
+    height: 280px;
+  }
+  .grafico-container .container-card .card-conteudo .card {
+    margin: 50px 15px;
+  }
+  .grafico-container .container-finalizacao {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+  }
+  .grafico-container .container-finalizacao .finalizacao {
+    margin: 0;
+    padding: 5px;
+    width: 100%;
+  }
+  .grafico-container .container-finalizacao .container-teste {
+    height: 50vh;
+  }
 }/*# sourceMappingURL=style.css.map */
