--- a/style.scss
+++ b/style.scss
@@ -7,20 +7,24 @@
 }
 
 main{
-  margin: 80px;
+  margin: 0;
 }
 
 .container-intro {
+
   width: 100%;
+  margin-bottom: 30px;
   display: flex;
   justify-content: center; /* Centraliza horizontalmente */
   align-items: center; /* Centraliza verticalmente */
 }
 
 .intro-container {
-  width: 100%; 
-  margin: 30px ; 
-  
+  padding: 50px;
+  width: 100%;
+  background: linear-gradient(to right, rgba(0,0,0,0.9), rgba(0, 0, 0, 0.9)), url('./img/fundo.jpeg');
+   background-size: cover;
+  color: rgb(255, 255, 255);
 }
 
 .intro-texto {
@@ -28,163 +32,160 @@ main{
   text-align: justify;
   width: 100%;
 
+
+
   h1{
     margin-bottom: 30px;
-    color: rgb(49, 87, 182);
+    color: white;
     font-size: 40px;
   }
 }
 
 .container-card{
+  width: 100%;
   display: flex;
   flex-wrap:wrap ;
   justify-content: space-around;
 
-
-
-}
-
-.card{
-  width: 500px;
-  height: 200px;
-  margin: 30px;
-  border-radius: 15px;
-  align-items: center;
- 
- 
-
-  
-  .card-conteudo{
+  .card{
     width: 500px;
     height: 200px;
-    padding: 20px;
-    background-color: rgb(236, 237, 244);
-    align-items: center;
-     text-align: center;
-     transition: transform 0.3s ease, box-shadow 0.3s ease;
-     
-
-     &:hover{
-        transform: scale(1.05);
-        box-shadow: 0 0 20px rgb(176, 178, 194);
-      
-    h2{
-      color: rgb(49, 87, 182);
+    margin: 30px;
+    border-radius: 15px;
+    
+   
+   
+  
+    
+    .card-conteudo{
+      padding: 20px;
+      height: 200px;
+      background-color: rgb(236, 237, 244);
+      align-items: center;
+       text-align: center;
+       transition: transform 0.3s ease, box-shadow 0.3s ease;
+       
+  
+       &:hover{
+          transform: scale(1.05);
+          box-shadow: 0 0 20px rgb(176, 178, 194);
+        
+      h2{
+        color: rgb(49, 87, 182);
+      }
+  
+       }
+    
     }
-
-     }
+  
+  
+    p{
+      margin-top: 20px;
+    }
   
   }
-
-
-  p{
-    margin-top: 20px;
-  }
-
 }
 
-
-.grafico-container {
+.teste{
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   gap: 100px 50px;
   flex-wrap: wrap;
-  padding-top: 100px;
-  padding-bottom: 50px;
-  width: 100%;
-
-
-  .grafico-intro{
-    text-align: center;
-    margin: auto;
-    width: 1000px;
-    color: rgb(49, 87, 182);
+  margin-bottom: 80px;
+  margin-top: 80px;
   }
+  
 
-  .teste{
-    justify-content: center;
-    align-items: center;
-    gap: 50px 50px;
+  .grafico-container{
     display: flex;
-    flex-wrap: wrap;
-    margin: 20px;
+    flex-direction: column;
+    margin: 50px 50px;
 
-  }
-  .grafico {
-    position: relative;
-    width: 350px;
-    height: 250px;
-    box-shadow: 0 35px 80px rgba(55, 95, 204, 0.11);
-    transition: 0.5s;
-    justify-content: center;
-    display: flex;
-    cursor: pointer;
-    background-color: rgb(236, 237, 244);
-  }
-
-  .grafico:hover {
-    height: 500px;
-    background: rgb(49, 87, 182);
-    transition: 0.5s;
-  }
-
-  .grafico-img {
-    position: absolute;
-    width: 300px;
-    height: 150px;
-    border-radius: 12px;
-    top: 20px;
-    transition: 0.5s;
-    cursor: pointer;
-  }
-
-  .grafico-img img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 12px;
-    cursor: pointer;
-  }
-
-  .grafico-text {
-    position: absolute;
-    top: 200px;
-    width: 100%;
-    height: 35px;
-    overflow: hidden;
+    .grafico-intro{
     text-align: center;
-  }
-  .grafico:hover .grafico-text {
-    top: 50px;
-    height: 400px;
-  }
-
-  .grafico:hover .grafico-img {
-    top: -100px;
-    scale: 0.75;
-    box-shadow: 0 15px 45px rgba(0, 0, 0, 0.2);
-  }
-
-  .grafico-text h3 {
-    font-size: 1.5rem;
-    font-weight: 700;
-    line-height: 3rem;
-    color: black;
-    margin-top: -10px;
-
+      color: rgb(49, 87, 182);
+       
+        margin: auto;
+        padding: 0 200px;
     
   }
- 
-
-  .grafico-text p {
-    color: rgb(236, 237, 244);
-    padding: 0 20px;
-    margin: 10px 15px 5px 15px;
+  .teste .grafico {
+  position: relative;
+  width: 300px;
+  height: 300px;
+  background: rgb(49, 54, 79);
+  box-shadow: 0 35px 80px rgba(0, 0, 0, .15);
+  transition: .5s;
+  justify-content: center;
+  display: flex;
   }
-}
+  
+  .teste .grafico:hover{
+  height: 715px;
+  width: 400px;
+  border-radius: 20px;
+  }
+  
+  .teste .grafico .grafico-img{
+  position: absolute;
+  width: 200px;
+  height: 150px;
+  border-radius: 12px;
+  top: 20px;
+  transition: .5s;
+  }
+  
+  .teste .grafico  .grafico-img img{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 12px;
+  }
+  
+  .teste .grafico .grafico-text{
+  position: absolute;
+  top: 200px;
+  width: 100%;
+  height: 35px;
+  overflow: hidden;
+  text-align: center;
+  
+  }
+  
+  .teste .grafico:hover .grafico-text{
+  top: 100px;
+  height: 715px;
+  text-align: justify; 
+  padding: 3px;
+  }
+  
+  .teste .grafico:hover  .grafico-img{
+  top: -100px;
+  scale: .75;
+  box-shadow: 0 15px 45px rgba(0, 0, 0, .2);
+  }
+  
+  .teste .grafico .grafico-text h3 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 3rem;
+  color: rgb(230, 230, 246);
+  margin-top: -10px;
+  text-align: center;
+  }
+  
+  .teste .grafico .grafico-text p {
+  color: rgb(236, 237, 244);
+  padding: 0 20px;
+  margin: 10px 15px 5px 15px;
+  }
+
+
+
 
 .container-finalizacao{
   width: 100%;
@@ -192,6 +193,10 @@ main{
   margin: auto;
   display: flex;
   align-items: center;
+  padding: 50px;
+  display: flex;
+  flex-direction: column;
+
   
   
 
@@ -209,30 +214,32 @@ main{
 
 }
 
-.container-teste{
-  width: 500px;
-  height: 250px;
-  margin: 30px;
-  border-radius: 15px;
-  align-items: center;}
 
+.container-teste {
+  height: 35vh; /* 50% da altura da tela */
+  margin: 5%; /* 5% da largura da tela em cada margem */
+  border-radius: 10px;
+  align-items: center;
 
- .teste-intro{
-    width: 500px;
-    height: 250px;
+  .teste-intro {
+    height: 100%;
     background-color: rgb(236, 237, 244);
-    padding: 20px;
+    padding: 5%; /* 5% da largura da tela */
     align-items: center;
     text-align: center;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 
-     &:hover{
+    &:hover {
       transform: scale(1.05);
       box-shadow: 0 0 20px rgb(176, 178, 194);
-    
     }
-    }
- 
+  }
+}
+
+
+
+
+
 
   h3{
     margin-bottom: 20px;
@@ -308,12 +315,13 @@ button{
     width: 100%;
     bottom: 0;
     margin: 0;
-    padding: 50px;
+    padding: 30px 50px;
     background-color: rgb(49, 87, 182);
 
     h3{
       text-align: center;
       padding-bottom: 30px;
+      color: black;
     }
 
   }
@@ -394,11 +402,47 @@ button{
     }
   
   
+    @media screen and (max-width: 768px){
+        .container-intro .intro-container  {
+        margin: 0;
+        padding: 10px;
+      }
+   
+     .container-card .card-conteudo{
+        height: 280px;
+
+        .card{
+          margin: 50px 15px;
+        }
+       
+      }
+
+    .container-finalizacao{
+      display: flex;
+      flex-direction: column;
+
+      padding: 10px;
+
+      .finalizacao{
+        margin: 0;
+        padding: 5px;
+        width: 100%;
     
+      }
+
+      .container-teste{
+      height: 50vh;
+    }
+    }
+  }
+}
   
+    
+      
+      
 
 
-
+    
 
 
 
